Merge branch 'no-ratchet' into 'main'
No ratchet

See merge request ggb/geogebra!10870

GitOrigin-RevId: d68d4459e26a8e99e217636d47b336580e3cf0e4