@@ -2,13 +2,13 @@
  * GeoGebra - Dynamic Mathematics for Everyone
  * Copyright (c) GeoGebra GmbH, Altenbergerstr. 69, 4040 Linz, Austria
  * https://www.geogebra.org
- * 
+ *
  * This file is licensed by GeoGebra GmbH under the EUPL 1.2 licence and
  * may be used under the EUPL 1.2 in compatible projects (see Article 5
  * and the Appendix of EUPL 1.2 for details).
  * You may obtain a copy of the licence at:
  * https://interoperable-europe.ec.europa.eu/collection/eupl/eupl-text-eupl-12
- * 
+ *
  * Note: The overall GeoGebra software package is free to use for
  * non-commercial purposes only.
  * See https://www.geogebra.org/license for full licensing details
@@ -62,8 +62,8 @@ public class BrowserLauncher {
 					// file:///
 					// from the start
 					fixedURL = fixedURL.replaceAll("file:/", ""); // remove
-																	// file:/
-																	// from
+					// file:/
+					// from
 					// the start
 
 					fixedURL = fixedURL.replaceAll("[/\\\\]+", "\\" + "\\"); // replace
@@ -74,32 +74,36 @@ public class BrowserLauncher {
 					fixedURL = "file:///" + fixedURL; // put "file:///" back in
 				}
 
-				Runtime.getRuntime().exec(
-						"rundll32.exe url.dll,FileProtocolHandler " + fixedURL);
+				Runtime.getRuntime().exec("rundll32.exe url.dll,FileProtocolHandler " + fixedURL);
 			} else { // assume Unix or Linux
-				String[] browsers = { "xdg-open", "firefox", "google-chrome",
-						"chromium-browser", "opera", "konqueror", "epiphany",
-						"safari", "mozilla", "netscape", "seamonkey" };
+				String[] browsers = {
+					"xdg-open",
+					"firefox",
+					"google-chrome",
+					"chromium-browser",
+					"opera",
+					"konqueror",
+					"epiphany",
+					"safari",
+					"mozilla",
+					"netscape",
+					"seamonkey"
+				};
 				String browser = null;
-				for (int count = 0; count < browsers.length
-						&& browser == null; count++) {
-					if (Runtime.getRuntime()
-							.exec(new String[] { "which", browsers[count] })
-							.waitFor() == 0) {
+				for (int count = 0; count < browsers.length && browser == null; count++) {
+					if (Runtime.getRuntime().exec(new String[] {"which", browsers[count]}).waitFor() == 0) {
 						browser = browsers[count];
 					}
 				}
 				if (browser == null) {
 					Log.error("Could not find web browser");
 					return;
-
 				}
 				Log.debug("Using browser " + browser);
-				Runtime.getRuntime().exec(new String[] { browser, url });
+				Runtime.getRuntime().exec(new String[] {browser, url});
 			}
 		} catch (Exception e) {
 			Log.debug(e);
 		}
 	}
-
 }
